# ceQTL

./: .gitignore  README.md  activate.fish  ceQTL  ceQTL-tool  ceQTL-tool.py  ceQTL.py  config.toml  pyproject.toml  tcga-process.fish
ceqtl/: README.md  __init__.py  __main__.py  ceqtl.py  density.py  eqtl.py  manh.py  med.py  procs.py  pyproject.toml  roc.py  scatter.py  tool.py
ceqtl/call/: args_def.py  main.py  processes.py
ceqtl/call/scripts/: DataPreparation.R  InteractionLm.R
ceqtl/exprqc/: main.py
ceqtl/preproc/: main.py
ceqtl/scripts/: pSGPair2Beds.py  pTFT2GeneGroups.R  pTFTSG2MedCases.py
ceqtl/shared/: procs.py
ceqtl/shared/scripts/: DataPreparation.R  DataPreparationTrio.R
ceqtl/simulate/: main.py
ceqtl/simulate/scripts/: ConstraintGeneration.R  DiffCoexprSimulation.R  TrioSimulation.R
ceqtl/tools/: aggr.py  atsnp.py  compare.py  decov.py  enrich.py  eqtl.py  expr_qc.py  genotype_qc.py  hg.py  man.py  med.py  pairsnpgenes.py  pwmscan.py  qq.py  roc.py  rs2bed.py  simulate.py  sorttfgenes.py  tcga.py
manuscript/: abstract.md
real/gtex-lung/: 1.process_gt.py  1.process_gt.toml  1.process_gt2.py  10.scatter.fish  11.density.batch.fish  11.density.fish  12.nsamples.hist.R  2.process_expr.py  2.process_expr.toml  (+17 more)
scripts/: ceQTL-pAdjust.R  ceQTL-pToChow.py  ceQTL-tool-pAggregate.py
testdata/: sim1-gtmat.txt  simulated_expr.txt  simulated_genesnps.gmt  simulated_snpgenes.gmt  simulated_tftargets.gmt
tests/: ceqtl.atsnp.txt  ceqtl.filtered.txt  ceqtl.txt  test.expr.txt  test.hilight.txt  test.snp.txt  test.tfhits.bed  test.tfhits.txt
