[tool.poetry]
name = "ceqtl"
version = "0.0.1"
description = "Co-expression QTLs"
authors = ["pwwang <pwwang@pwwang.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
biopipen = { path = "../biopipen", develop = true }

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
ceqtl = "ceqtl:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
